# haskellDMX

./: .gitignore  README.md  defunct_flake.nix  hello.cabal  keypadLogic.cabal  keypadLogicV2.cabal
Boards/: description.txt
DMXKeyCmdLogic/: DMXKeyCmdLogic.cpp  DMXKeyCmdLogic.h  rewrite.cpp
DMXStringCmdLogic/: DMXStringCmdLogic.h
Old_Code/: README.md  chatGPT prompts.txt
Old_Code/KeypadLogic/: KeypadLogic.cpp
Old_Code/PockonsoleMini/: PockonsoleV2WITHKeypadBETA.ino.TEENSY36.hex  PocksonoleMini.ino
PockonsoleKpdDMX/: KeypadDMX.cpp  KeypadDMX.h  PockonsoleKpdDMX.cpp  PockonsoleKpdDMX.h  oldFunction.cpp  rewrite.cpp
PockonsoleKpdDMX/EasingLibrary/MCUIndependent/: makefile  subdir.mk
PockonsoleMini/: PocksonoleMini.ino
PockonsolePro/: PockonsolePro.ino
src/: dmx.hs  dmxLogic.hs  dmxLogic2.hs  dmxLogic3.hs  hello.hs  keypadLogic.hs  keypadLogicV2.hs  keypadLogicV3.hs
src/dmx/: DmxUniverse.hs  DmxUniverseBuilders.hs  command_interpreter.hs  main.hs  string_parser.hs
