cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hello
version: 1.0.0.3

executable hello
  hs-source-dirs: src
  main-is: hello.hs
  build-depends: base

-- executable keypadLogic
--   hs-source-dirs: src
--   main-is: keypadLogic.hs
--   build-depends: base

-- executable keypadLogicV2
--   hs-source-dirs: src
--   main-is: keypadLogicV2.hs
--   build-depends: base

executable dmxLogic
  hs-source-dirs: src
  main-is: dmxLogic.hs
  build-depends: base


