cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: hello
version: 1.0.0.3

executable hello
  hs-source-dirs: src
  main-is: hello.hs
  build-depends: base

executable main
  hs-source-dirs: src/dmx
  main-is: main.hs
  build-depends: base, random

executable string_parser
  hs-source-dirs: src/dmx
  main-is: string_parser.hs
  build-depends: base, random, regex-posix



