cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: keypadLogicV2
version: 1.0.0.2

executable keypadLogicV2
  hs-source-dirs: src
  main-is: keypadLogicV2.hs
  build-depends: base
